[gd_scene load_steps=15 format=2]

[ext_resource path="res://img/69e4cc7c-29a2-472c-b35f-a899ac5ef803_rw_1920.jpg" type="Texture" id=1]
[ext_resource path="res://audio/a-hero-of-the-80s-126684.mp3" type="AudioStream" id=2]
[ext_resource path="res://fonts/gameboy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://z/ExtraModesMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=6]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0 )

[node name="ExtraModesMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -4.0
margin_right = 1024.0
margin_bottom = 603.0
texture = ExtResource( 1 )
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="run" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -56.0
margin_right = 39.0
margin_bottom = -36.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Run 'n Gun"
align = 0

[node name="sumo" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = 4.0
margin_right = 9.0
margin_bottom = 24.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Two Player Sumo"
align = 0

[node name="return1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -43.0
margin_top = -69.0
margin_right = 5.0
margin_bottom = -49.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0.458824, 0.905882, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Return"
align = 0

[connection signal="pressed" from="run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="sumo" to="." method="_on_sumo_pressed"]
[connection signal="pressed" from="return1" to="." method="_on_return1_pressed"]
